[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "=4.5.18", features = ["derive"]}
# https://docs.rs/nix/latest/nix/index.html
# https://docs.rs/libc/latest/libc/index.html
nix = { version = "0.29.0", features = ["fs"] }


# https://doc.rust-lang.org/stable/cargo/reference/cargo-targets.html#examples
# [[example]]
# name = "4_1"
# path = "examples/4_1.rs"
# doc-scrape-examples = true
#
# [package.metadata.example.4_1]
# name = "tee"
# description = "read from stdin and write to stdout and file"
#
# # =============
#
# [[example]]
# name = "4_2"
# path = "examples/4_2.rs"
# doc-scrape-examples = true
#
# [package.metadata.example.4_2]
# name = "copy"
# description = "copy file from src to dst"
#
# # =============
#
